<resources>
  <string name="app_name">shurjoPay</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_transactions">Transactions</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_profile">Profile</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="toggle_flash">Flash</string>
  <string name="flash_on">Flash [ON]</string>
  <string name="flash_off">Flash [OFF]</string>
  <string name="auto_focus_on">Auto Focus [ON]</string>
  <string name="auto_focus_off">Auto Focus [OFF]</string>
  <string name="formats">Formats</string>
  <string name="choose_formats">Choose Formats</string>
  <string name="select_camera">Select a Camera</string>
  <string name="ok_button">OK</string>
  <string name="cancel_button">Cancel</string>
  <string name="scan_to_pay">Scan To Pay</string>
  <string name="gallery">Gallery</string>
  <string name="light">Light</string>
  <string name="help">Help</string>
  <string name="payment_successful">Payment Successful</string>
  <string name="your_payment_has_been_successful">Your payment has been successful!</string>
  <string name="ok">OK</string>
  <string name="don_t_have_account">Don\'t have account?</string>
  <string name="register">Register</string>
  <string name="change_password">Change Password</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
  <string name="forgot_password">Forgot Password</string>
  <string name="password">Password</string>
  <string name="new_password">New Password</string>
  <string name="username">Username</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="phone_number">Phone Number</string>
  <string name="retype_password">Retype Password</string>
  <string name="retype_new_password">Retype New Password</string>
  <string name="email">Email</string>
  <string name="name">Name</string>
  <string name="enter_the_phone_number_associated_with_your_account">Enter the phone number associated with your account</string>
  <string name="verify">Verify</string>
  <string name="enter_the_6_digit_code_sent_to">Enter the 6 digit code sent to</string>
  <string name="transactions">Transactions</string>
  <string name="pay_bill">Pay Bill</string>
  <string name="claim_refund">Claim Refund</string>
  <string name="unable_to_connect">Unable To Connect</string>
  <string name="registration_successful_please_login">Registration Successful! Please Login</string>
  <string name="registration_successful">Registration Successful!</string>
  <string name="verification_successful">Verification Successful!</string>
  <string name="your_mobile_number_is_already_in_use">Your mobile number is already in use!</string>
  <string name="you_are_already_registered">You are already registered</string>
  <string name="this_field_is_required">This field is required</string>
  <string name="mobile_number_is_invalid">Mobile number is invalid</string>
  <string name="passwords_did_not_match">Passwords did not match</string>
  <string name="please_enter_6_digit_otp">Please enter 6 digit OTP</string>
  <string name="otp_did_not_match">OTP did not match!</string>
  <string name="mobile_number_or_password_did_not_match">Mobile number or password did not match!</string>
  <string name="you_do_not_have_an_account">You do not have an account!</string>
  <string name="your_account_is_not_active">Your account is not active!</string>
  <string name="activate">Activate</string>
  <string name="something_went_wrong">Something went wrong!</string>
  <string name="password_changed_successfully">Password changed successfully</string>
</resources>
