<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.ForgotPasswordActivity">

  <ImageView
      android:id="@+id/logoImageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/app_name"
      android:scaleType="center"
      android:src="@drawable/ic_shurjopay_logo"
      app:layout_constraintBottom_toTopOf="@id/descriptionTextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/descriptionTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:text="@string/enter_the_phone_number_associated_with_your_account"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/phoneLayout"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/phoneLayout"
      style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:hint="@string/phone_number"
      app:layout_constraintBottom_toTopOf="@id/forgotPasswordButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="16sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/forgotPasswordButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/forgot_password"
      android:textAllCaps="false"
      android:textColor="@color/colorAccent"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>