<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="15dp"
  android:background="@android:color/transparent"
  android:padding="10dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="110dp"
      android:background="@android:color/transparent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight=".47"
          android:background="@drawable/white_transparent_k" />

        <View
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight=".53"
          android:background="@drawable/radius_top" />
      </LinearLayout>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_decoration" />

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_check_list" />
    </RelativeLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@drawable/radius_bottom"
      android:orientation="vertical"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingBottom="8dp">

      <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/payment_successful"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

      <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/your_payment_has_been_successful"
        android:textAlignment="center" />

      <TextView
        android:id="@+id/okTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/ok"
        android:textColor="@color/colorSecondary" />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
