<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="48dp"
    tools:context=".ui.fragment.HomeFragment">

  <androidx.cardview.widget.CardView
      android:id="@+id/scanCardView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:clickable="true"
      android:elevation="8dp"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      app:layout_constraintBottom_toTopOf="@id/payBillCardView"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/transactionsCardView"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:text="@string/scan_to_pay"
        android:textSize="20sp"
        app:drawableTint="@color/colorPrimary"
        app:drawableTopCompat="@drawable/ic_scan" />
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/transactionsCardView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="8dp"
      android:clickable="true"
      android:elevation="8dp"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      app:layout_constraintBottom_toTopOf="@id/claimCardView"
      app:layout_constraintLeft_toRightOf="@id/scanCardView"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="16dp"
        android:text="@string/transactions"
        android:textSize="20sp"
        app:drawableTint="@color/colorPrimary"
        app:drawableTopCompat="@drawable/ic_transactions" />
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/payBillCardView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:clickable="true"
      android:elevation="8dp"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/claimCardView"
      app:layout_constraintTop_toBottomOf="@id/scanCardView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:text="@string/pay_bill"
        android:textSize="20sp"
        app:drawableTint="@color/colorPrimary"
        app:drawableTopCompat="@drawable/ic_gallery" />
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/claimCardView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:clickable="true"
      android:elevation="8dp"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@id/payBillCardView"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/transactionsCardView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:text="@string/claim_refund"
        android:textSize="20sp"
        app:drawableTint="@color/colorPrimary"
        app:drawableTopCompat="@drawable/ic_transactions" />
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
